# CeleX5-ROS

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  README_zh.md  package.xml
celex5_calibration/: .gitignore  CMakeLists.txt  README.md  README_zh.md  package.xml
celex5_calibration/launch/: event_registration.launch  extrinsics_calibration_zed_demo.launch  publish_sync_images_zed_demo.launch  sync_images_calibration_zed_demo.launch  temporal_offset_calibration_zed_demo.launch
celex5_calibration/src/extrinsics/: CMakeLists.txt  extrinsics_calculate.cpp  extrinsics_calculate.h  extrinsics_calibration_node.cpp  pub_stored_sync_images.cpp  pub_stored_sync_images.h  sync_images.cpp  sync_images.h
celex5_calibration/src/extrinsics/kalibr_cfg/: checkerboard.yaml  results-cam-2020-02-12-18-26-45.txt
celex5_calibration/src/intrinsics/: README_zh.md
celex5_calibration/src/intrinsics_extrinsics/: README.md  README_zh.md
celex5_calibration/src/intrinsics_extrinsics/kalibr/: CMakeLists.txt  pub_stored_sync_images.cpp  pub_stored_sync_images_node.cpp  sync_images.cpp  sync_images.h
celex5_calibration/src/intrinsics_extrinsics/kalibr/example_result/: camchain-2020-02-12-18-26-45.yaml
celex5_calibration/src/intrinsics_extrinsics/pkg_camera_calibration/: README.md  README_zh.md
celex5_calibration/src/pattern/: CMakeLists.txt  README.md  README_zh.md  pattern_generator.cpp  pattern_generator.h  pattern_generator_node.cpp
celex5_calibration/src/registration/: CMakeLists.txt  README.md  event_registration.cpp  event_registration.h  event_registration_node.cpp
celex5_calibration/src/temporal/: CMakeLists.txt  temporal_offset_calculate.cpp  temporal_offset_calculate.h  temporal_offset_calibration_node.cpp
celex5_msgs/: CMakeLists.txt
celex5_msgs/msg/: Event.msg  EventVector.msg  Imu.msg  ImuVector.msg
celex5_ros/: CMakeLists.txt  README.md  README_zh.md  nodelet_plugins.xml  package.xml
celex5_ros/config/: celex5_events_parameters.yaml  celex5_frame_parameters.yaml
celex5_ros/launch/: celex5_mipi.launch  celex5_ros_node.launch
celex5_ros/launch/includes/: nodelet.launch.xml
celex5_ros/scripts/: celex.rules  create_udev_rules.sh  delete_udev_rules.sh
celex5_ros/src/: celex5_ros_node.cpp
celex5_ros/src/bean/: camera_publisher.cpp  camera_publisher.h  celex5_data_forwarder.cpp  celex5_data_forwarder.h  celex5_display_pub_factory.cpp  celex5_display_pub_factory.h  celex5_nodelet.cpp  celex5_options.cpp  celex5_options.h  celex5_ros_bean.cpp  celex5_ros_bean.h
celex5_ros/src/calibration/: CMakeLists.txt  README.md  README_zh.md  pattern_generator.cpp  pattern_generator.h
celex5_ros/src/interactive/: celex5_configure.cpp  celex5_configure.h  celex5_ddy_configure.cpp  celex5_ddy_configure.h  celex5_display_controller.cpp  celex5_display_controller.h  celex5_display_pub_factory.cpp  celex5_display_pub_factory.h
celex5_ros/src/interface/: celex5_configure.cpp
celex5_ros/src/node/: celex5_ros_node.cpp
celex5_ros/src/nodelet/: celex5_nodelet.cpp  celex5_nodelet.h
celex5_ros/src/sdk/: CMakeLists.txt
celex5_ros/src/sdk/configproc/: xmlreader.cpp
celex5_ros/src/sdk/eventproc/: celex5.cpp  celex5dataprocessor.cpp  celex5dataprocessor.h
celex5_ros/src/sdk/include/celex5/: celex5.h
launch/: celex5_mipi.launch  celex5_ros_node.launch
launch/include/: nodelet.launch.xml
src/: celex5_ros_node.cpp  celex_ros_node.cpp
src/bean/: CeleX5Options.cpp  CeleX5Options.h  CeleX5ROS.cpp  CeleX5ROS.h  celex5_data_forwarder.cpp  celex5_data_forwarder.h  celex5_data_pub_factory.cpp  celex5_data_pub_factory.h  celex5_display_controller.cpp  celex5_display_controller.h  celex5_display_pub_factory.cpp  celex5_display_pub_factory.h  celex5_nodelet.cpp  celex5_nodelet.h  celex5_options.cpp  celex5_options.h  celex5_ros.cpp  celex5_ros.h  celex5_ros_bean.cpp  celex5_ros_bean.h
src/interface/: CeleX5Configure.cpp  CeleX5Configure.h  celex5_configure.cpp  celex5_configure.h
src/sdk/eventproc/: celex5.cpp  celex5dataprocessor.cpp  celex5dataprocessor.h
src/sdk/include/: celextypes.h
src/sdk/include/celex5/: celex5.h  celex5datamanager.h  celex5processeddata.h
